hbase踩坑完毕